syntax = "proto3";

enum FileType {
  UNKNOWN = 0;
  RUST = 1;
  PROTO = 2;
  BINARY = 3;
}

message ExtractedKeyword {
  string keyword = 1;
  uint64 occurrences = 2;
}

message KeywordMatch {
  string filename = 1;
  uint64 occurrences = 2;
}

message KeywordMatches { repeated KeywordMatch matches = 1; }

message File {
  string filename = 1;
  string content = 2;
  bool is_binary = 3;
  bool is_directory = 4;
}
